<resources>
    <string name="app_name">Weathery R</string>
    <string name="future_day_night">День | Ночь</string>
    <string name="choose_city">Выберите город:</string>
    <string name="wind_speed">Показывать скорость ветра</string>
    <string name="pressure">Показывать атмосферное давление</string>
    <string name="accept">Применить</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="temperature">Единицы измерения температуры:</string>
    <string name="C">°C</string>
    <string name="F">°F</string>
    <string name="wind_speed_count">Единицы измерения скорости ветра:</string>
    <string name="wind_speed_count_1">м/с</string>
    <string name="wind_speed_count_2">км/ч</string>
    <string name="settings_btn">настройки</string>
    <string name="settings_accept">применить</string>
    <string name="windSpeed">Скорость ветра:</string>
    <string name="pressureWeather">Давление:</string>
    <string name="pressure_units">мм рт.ст.</string>
    <string name="humidity">Влажность:</string>
    <string name="humidity_units">%</string>
    <string name="cloud">Облачно</string>
    <string name="clear">Ясно</string>
    <string name="rain">Осадки</string>
    <string name="mist">Туман</string>
    <string name="drizzle">Изморось</string>
    <string name="snow">Снег</string>
    <string name="day">Днём</string>
    <string name="night">Ночью</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header">Navigation header</string>
    <string name="username">Username</string>
    <string name="usermail">Usermail</string>
    <string name="feedback">Форма обратной связи</string>
    <string name="msg">Введите ваше сообщение</string>
    <string name="send">Отправить</string>
    <string name="weather_visual">визуальное отображение погоды</string>
    <string name="about">О разработчике</string>
    <string name="communicate">Инструменты</string>
    <string name="forecast">Прогноз</string>
    <string name="settings">Настройки</string>
    <string name="info">О городе</string>
    <string name="network_error">Ошибка. Возможны проблемы с соединением</string>
    <string name="insert_message">Введите сообщение</string>
    <string name="sent">Отправлено</string>
    <string name="delete">Удалить</string>
    <string name="insertCity">Введите город (на Английском)</string>
    <string name="add">Добавить</string>
    <string name="no_city">Введите и выберите город</string>
    <string name="no_such_city">Город не найден</string>
    <string name="already_exists">Город уже есть в списке</string>
    <string name="my_location">Моё местоположение</string>
    <string name="automaticly">Автоматически на основе города</string>
    <string name="please_choose_city">Сначала выберите город</string>
    <string name="about_city">О городе</string>
    <string name="no_location">Не удалось определить местоположение</string>
    <string name="today">Сегодня</string>
    <string name="dark">Тёмная</string>
    <string name="light">Светлая</string>
    <string name="auto">Автоматическая</string>
    <string name="city_title">Город</string>
    <string name="showing">Отображение</string>
    <string name="theme">Тема</string>
    <string name="like">Оценить приложение</string>
    <string name="denied">Разрешение не предоставлено</string>
    <string name="denied_message">Без предоставления этого разрешения, приложение может работать некорректно. Вы уверены, что не хотите его предоставить?</string>
    <string name="sure">Уверен</string>
    <string name="retry">Предоставить</string>
    <string name="show_humidity">Показывать влажность</string>

</resources>
