<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_future"
            android:icon="@drawable/cloud"
            android:title="@string/forecast" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/cloud"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/cloud"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
