<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/cityChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/choose_city"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        />

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cityChooser"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="15dp"
        android:entries="@array/cities"
        >
    </Spinner>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme_enabler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/citySpinner"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/dark_theme"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dark_theme_enabler"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/temperature"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>


    <RadioGroup
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:textSize="15sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/F"
            android:textSize="15sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/wind_speed_count"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <RadioGroup
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/windSpeed"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed_count_1"
            android:textSize="15sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/kmh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed_count_2"
            android:textSize="15sp"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/showWindSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/wind"
        android:text="@string/wind_speed"/>

    <CheckBox
        android:id="@+id/showPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/showWindSpeed"
        android:text="@string/pressure"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings_accept"
        android:onClick="settings_accept"/>

</androidx.constraintlayout.widget.ConstraintLayout>