<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pullToRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="3"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/date">

                    <TextView
                        android:id="@+id/willBe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="60sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/weather_image"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/weather_visual" />

                    <TextView
                        android:id="@+id/weather_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:text="@string/windSpeed"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/windSpeed_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/windSpeed_units"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:text="@string/pressureWeather"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pressure_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:text="@string/pressure_units"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/layout4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="3"
                        android:text="@string/humidity_units"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>